--- a/produtos.css
+++ b/produtos.css
@@ -1,3 +1,1 @@
-header {background:#ff0066;}
-nav li {display: inline;margin:0 0 0 15px;}
-nav a  {text-transform: uppercase;color: #000000;font-weight:bold; font-size: 22px;text-decoration:  none;}
+header {background:#EE82EE;} nav li {display: inline; margin: 0 0 0 15px;} nav a {text-transfornm: uppercase; color:#000000; font-weight: bold; fonte-size: 22px; text-decoration: none;} .caixa {position:relative; width: 960px; margin: 0 auto;} nav{position: absolute; top: 110px; right: 0;} 
