--- a/produtos.css
+++ b/produtos.css
@@ -1,27 +1,72 @@
-header {background:#EE82EE;} nav li {display: inline; margin: 0 0 0 15px;} nav a {text-transfornm: uppercase; color:#000000; font-weight: bold; fonte-size: 22px; text-decoration: none;} .caixa {position:relative; width: 960px; margin: 0 auto;} nav{position: absolute; top: 110px; right: 0;}
+header {background: LimeGreen;
+    padding:20px 0;}
 
-protudos{width: 940px;
-margin: 0 auto; padding:50px 0;} 
+nav li {display: inline; 
+    margin: 0 0 0 15px;}
 
-.produtos li { display: inline-block; text-align: center; width: 30%; vertical-align: top; margin 0.1.5% padding: 30px 20px; box-sizing: border-box; border: 2px solid #000000; border-radius: 10px;}
+nav a {text-transform: uppercase;
+    color: #000000;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;}
 
-.produtos h2 {font-size: 30px; font-weight: bold;}
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;}
 
-.produtos-descricao {font-size: 18px;}
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;}
 
-.produto-preco {font-size: 22px; font-weigth: bold; margin-top: 10px}
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;}
 
-nav a:hover{color: #c78c19; text-decoration: underline;}
+.produtos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: 2px solid #000000;
+    border-radius: 10px;}
+
+.produtos h2 {
+    font-size: 30px;
+    font-weight: bold;}
+
+.produto-descricao {
+    font-size: 18px;}
+
+.produto-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;}
+
+footer {
+    text-align: center;
+    background: #000000;
+    padding: 40px 0;}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;}
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;}
 
 .produtos li:hover {
-  border-color: #c78c19;}
+    border-color: #C78C19;}
 
 .produtos li:active {
-  border-color: #088c19;}
+    border-color: #088C19;}
 
 .produtos li:hover h2 {
-  font-size: 34px;}
-
-footer {text-align: center; background: #000000; padding: 40px 0;}
-
-.copyright {color: #FFFFFF font-size: 13px; margin: 20px 0 0;}
+    font-size: 34px;}
