--- a/produtos.css
+++ b/produtos.css
@@ -1,3 +1,37 @@
+#banner {Width:100%;}
+h1 {text-align:center;}
+P {text-align:center;}
+#missao{font-size:20px}
+em strong {color.#FF0000}
+itens{font-style:italic;font-size:25px}
+beneficios{background:#FFFFFF;padding:20px;}
+principal{background#CCCCCC;padding:30px}
+h2{text-align:center;}
+.imagembeneficios{width:60%;}
+ul{display:inline-block;vertical-align:top;}
+
+footer {
+    text-align: center;
+    background: #000000;
+    padding: 40px 0;}
+
+.copyright {
+    color: #FFFFFF;
+    font-size: 13px;
+    margin: 20px 0 0;}
+
+nav a:hover {
+    color: #C78C19;
+    text-decoration: underline;}
+
+.produtos li:hover {
+    border-color: #C78C19;}
+
+.produtos li:active {
+    border-color: #088C19;}
+
+.produtos li:hover h2 {
+    font-size: 34px;}
 header {background: LimeGreen;
     padding:20px 0;}
 
